# robotframework-common-keywords

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_CONTEXT.md  README.md  __init__.py  conftest.py  pyproject.toml
.claude/skills/extend-common-keywords/: SKILL.md  test-cases-template.md
api_validation/: error_responses.resource  pagination.resource  response_schema.resource  status_codes.resource
data_generators/: invalid_data.resource
docs/: COVERAGE.md  EXAMPLES.md  EXCEL_TO_MARKDOWN.md  INTEGRATION.md
docs/keyword-catalog/: api_validation-error_responses.html  api_validation-pagination.html  api_validation-response_schema.html  api_validation-response_time.html  api_validation-status_codes.html  data_generators-invalid_data.html  form_validation-_helpers.html  form_validation-date_field.html  form_validation-datepicker.html  form_validation-dropdown_field.html  form_validation-email_field.html  form_validation-file_upload.html  form_validation-number_field.html  form_validation-password_field.html  form_validation-phone_field.html  form_validation-required_field.html  form_validation-text_area.html  form_validation-text_field.html  form_validation-url_field.html  libraries-api_validation_helpers.html  libraries-boundary_generator.html  libraries-date_helpers.html  libraries-faker_wrapper.html  libraries-file_helpers.html  libraries-password_helpers.html  libraries-phone_helpers.html  libraries-yaml_loader.html  ui_validation-accessibility.html  ui_validation-button.html  ui_validation-checkbox.html  ui_validation-element_state.html  ui_validation-form_behavior.html  ui_validation-link.html  ui_validation-radio.html
docs/superpowers/plans/: 2026-05-09-project-context.md  2026-05-09-src-layout-restructure.md  2026-05-10-pypi-publishing.md
docs/superpowers/specs/: 2026-05-09-project-context-design.md  2026-05-09-restructure-project-design.md  2026-05-09-restructure-project.md  2026-05-10-pypi-publishing-design.md
form_validation/: _helpers.resource  date_field.resource  datepicker.resource  dropdown_field.resource  email_field.resource  file_upload.resource  number_field.resource  phone_field.resource  required_field.resource  text_area.resource  text_field.resource
libraries/: api_validation_helpers.py  boundary_generator.py  file_helpers.py  password_helpers.py  phone_helpers.py
scripts/: build-and-verify.sh  excel_to_markdown.py  generate-keyword-catalog.sh  new_keyword.py  publish.sh  run-excel-to-markdown.sh
src/robot_common_keywords/: __init__.py  __version__.py
src/robot_common_keywords/api_validation/: error_responses.resource  pagination.resource  response_schema.resource  response_time.resource  status_codes.resource
src/robot_common_keywords/form_validation/: date_field.resource  datepicker.resource  email_field.resource  file_upload.resource  number_field.resource  password_field.resource  phone_field.resource  text_area.resource  text_field.resource  url_field.resource
src/robot_common_keywords/libraries/: date_helpers.py  faker_wrapper.py  yaml_loader.py
src/robot_common_keywords/test_data/: date_formats.yaml  invalid_emails.yaml  password_policies.yaml  postal_codes.yaml  valid_emails.yaml
src/robot_common_keywords/test_data/schemas/: paginated_users.schema.json
src/robot_common_keywords/ui_validation/: accessibility.resource  button.resource  checkbox.resource  form_behavior.resource  link.resource  radio.resource
test_data/: boundary_strings.yaml  invalid_emails.yaml  phone_formats.yaml
test_data/sample_files/: README.md
test_data/schemas/: error.schema.json  user.schema.json
tests/: __init__.py  test_api_live.robot  test_api_synthetic.robot  test_checkbox.robot  test_data_generators.robot  test_date_field.robot  test_datepicker.robot  test_dropdown_field.robot  test_email_field.robot  test_file_upload.robot  test_integration_herokuapp.robot  test_new_keyword_script.py  test_number_field.robot  test_password_field.robot  test_phone_field.robot  test_required_field.robot  test_text_area.robot  test_text_field.robot  test_ui_accessibility.robot  test_ui_button.robot  test_ui_checkbox.robot  test_ui_element_state.robot  test_ui_form_behavior.robot  test_ui_link.robot  test_ui_radio.robot  test_url_field.robot
tests/fixtures/: text_form.html
ui_validation/: button.resource  checkbox.resource  element_state.resource  link.resource
