[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "robotframework-common-keywords"
dynamic = ["version"]
description = "Reusable validation keyword package for Robot Framework — one-line validations for forms, APIs, and UI state."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "QuanUH", email = "quan3c10@gmail.com" },
]
keywords = ["robotframework", "testing", "validation", "qa", "forms", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "robotframework>=7.0",
    "robotframework-browser>=18.0",
    "robotframework-requests>=0.9.7",
    "faker>=25.0",
    "jsonschema>=4.0",
    "phonenumbers>=8.13",
    "pyyaml>=6.0",
]

[project.urls]
Homepage   = "https://github.com/quan3c10/robotframework-common-keywords"
Repository = "https://github.com/quan3c10/robotframework-common-keywords"
Issues     = "https://github.com/quan3c10/robotframework-common-keywords/issues"
Changelog  = "https://github.com/quan3c10/robotframework-common-keywords/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "robotframework-pabot>=4.0",
    "robotframework-datadriver>=1.11",
    "pytest>=7.0",
]
# For scripts/excel_to_markdown.py and scripts/run-excel-to-markdown.sh
excel-markdown = [
    "pandas>=2.0",
    "tabulate>=0.9",
    "openpyxl>=3.1",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
pythonpath = ["scripts"]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "robot_common_keywords.__version__.__version__" }

[tool.setuptools.package-data]
robot_common_keywords = [
    "**/*.resource",
    "**/*.yaml",
    "**/*.json",
    "test_data/sample_files/*",
]
